WIP: Fix shifting/weird layout (#3395)
* Fix shifting/weird layout

* Fixup tests/linting

--- a/ui/web_modules/sourcegraph/blob/styles/Monaco.css
+++ b/ui/web_modules/sourcegraph/blob/styles/Monaco.css
@@ -673,10 +673,6 @@
 	flex: 1 1 auto;
 }
 
-:global #workbench\.editors\.stringEditor {
-	margin-left: 5px;
-}
-
 :global .monaco-editor.vs-dark .view-overlays .selected-text {
 	background-color: #0091ea !important;
 }
